<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="12dp"
    app:cardMaxElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextViewTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserve_bikes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNumBikesTitle"
            style="@style/TextViewSubTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/number_of_bikes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintVertical_bias="1.0" />

        <Spinner
            android:id="@+id/spnBikes"
            android:layout_width="0dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/etExpirationDate"
            app:layout_constraintEnd_toEndOf="@+id/tvNumBikesTitle"
            app:layout_constraintStart_toStartOf="@id/tvNumBikesTitle"
            app:layout_constraintTop_toBottomOf="@id/tvNumBikesTitle" />

        <TextView
            android:id="@+id/tvDateExpirationtitle"
            style="@style/TextViewSubTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/expiration_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/tvNumBikesTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <EditText
            android:id="@+id/etExpirationDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/date"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDateExpirationtitle" />

        <TextView
            android:id="@+id/tvRangeTitle"
            style="@style/TextViewSubTitles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/search_range"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spnBikes" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rsSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:stepSize="100"
            android:value="100"
            android:valueFrom="100"
            android:valueTo="1000"
            app:layout_constraintBottom_toTopOf="@+id/btnRequets"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRangeTitle" />

        <Button
            android:id="@+id/btnRequets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/reserve"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rsSearch" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
